apps/radarr/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: radarr-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: homepage
        app.kubernetes.io/name: homepage
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: jellyseerr
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: prowlarr
    toPorts:
    - ports:
      - port: "7878"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: radarr-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: prowlarr
    toPorts:
    - ports:
      - port: "9696"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: qbittorrent
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  - toFQDNs:
    - matchName: radarr.servarr.com
    - matchName: radarr.video
    - matchName: api.themoviedb.org
    - matchName: image.tmdb.org
    - matchName: omdbapi.com
    - matchName: www.omdbapi.com
    - matchName: imdb.com
    - matchName: www.imdb.com
    - matchName: m.media-amazon.com
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
